// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentHomePageComponent should snap with blank fields 1`] = `
<tm-student-home-page
  courses={[Function Array]}
  hasEventualConsistencyMsg="false"
  httpRequestService={[Function HttpRequestService]}
  recentlyJoinedCourseId=""
  route={[Function ActivatedRoute]}
  sessionsInfoMap={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  user=""
>
  <div
    class="card bg-light top-padded"
  >
    
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        []: 
      </strong>
      <span
        class="float-sm-right"
      >
        <a
          class="btn btn-light btn-sm button"
          href="/course?user="
          ng-reflect-ngb-tooltip="View and edit information rega"
          ng-reflect-query-params="[object Object]"
          ng-reflect-router-link="../course"
          ngbtooltip="View and edit information regarding your team"
          routerlink="../course"
        >
           View team 
        </a>
      </span>
    </div>
    <div
      class="table-responsive"
    >
      
      
      <table
        class="table table-striped table-bordered margin-0"
      >
        <tbody>
          <tr>
            <th
              class="align-center white"
            >
               Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
            </th>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with null fields 1`] = `
<tm-student-home-page
  courses={[Function Array]}
  hasEventualConsistencyMsg="false"
  httpRequestService={[Function HttpRequestService]}
  recentlyJoinedCourseId=""
  route={[Function ActivatedRoute]}
  sessionsInfoMap={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  user="undefined"
>
  
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with populated fields 1`] = `
<tm-student-home-page
  courses={[Function Array]}
  hasEventualConsistencyMsg="false"
  httpRequestService={[Function HttpRequestService]}
  recentlyJoinedCourseId=""
  route={[Function ActivatedRoute]}
  sessionsInfoMap={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  user={[Function String]}
>
  <div
    class="card bg-light top-padded"
  >
    
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        [CS2103]: Software Engineering
      </strong>
      <span
        class="float-sm-right"
      >
        <a
          class="btn btn-light btn-sm button"
          href="/course?user=John%20Doe&courseid=CS2103"
          ng-reflect-ngb-tooltip="View and edit information rega"
          ng-reflect-query-params="[object Object]"
          ng-reflect-router-link="../course"
          ngbtooltip="View and edit information regarding your team"
          routerlink="../course"
        >
           View team 
        </a>
      </span>
    </div>
    <div
      class="table-responsive"
    >
      
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr>
            <th>
              Session Name
            </th>
            <th>
              Deadline
            </th>
            <th>
              Submissions
            </th>
            <th>
              Responses
            </th>
            <th>
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            
            <td>
              First Session
            </td>
            <td>
              1200
            </td>
            <td>
              <a
                ng-reflect-ngb-tooltip="The session is not open for su"
                style="border-bottom: 1px dashed black;"
              >
                 Submitted 
              </a>
            </td>
            <td>
              <a
                ng-reflect-ngb-tooltip="The responses for the session "
                style="border-bottom: 1px dashed black;"
              >
                 Published 
              </a>
            </td>
            <td>
              
              <a
                class="btn btn-light btn-sm btn-left button"
                href="/sessions/result?courseid=CS2103&fsname=First%20Session&user=John%20Doe"
                ng-reflect-ngb-tooltip="View the submitted responses f"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="../sessions/result"
                ngbtooltip="View the submitted responses for this feedback session"
                routerlink="../sessions/result"
              >
                 View Responses 
              </a>
              
              
              
              <a
                class="btn btn-light btn-sm disabled button"
              >
                 Start Submission 
              </a>
              
              
              <a
                class="btn btn-light btn-sm button"
                href="/sessions/submission?courseid=CS2103&fsname=First%20Session&user=John%20Doe"
                ng-reflect-ngb-tooltip="Edit submitted feedback"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="../sessions/submission"
                ngbtooltip="Edit submitted feedback"
                routerlink="../sessions/submission"
              >
                 Edit Submission 
              </a>
              
              
            </td>
          </tr>
          <tr>
            
            
            <td>
              Second Session
            </td>
            <td>
              1200
            </td>
            <td>
              <a
                ng-reflect-ngb-tooltip="The session is not open for su"
                style="border-bottom: 1px dashed black;"
              >
                 Submitted 
              </a>
            </td>
            <td>
              <a
                ng-reflect-ngb-tooltip="The responses for the session "
                style="border-bottom: 1px dashed black;"
              >
                 Published 
              </a>
            </td>
            <td>
              
              <a
                class="btn btn-light btn-sm btn-left button"
                href="/sessions/result?courseid=CS2103&fsname=Second%20Session&user=John%20Doe"
                ng-reflect-ngb-tooltip="View the submitted responses f"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="../sessions/result"
                ngbtooltip="View the submitted responses for this feedback session"
                routerlink="../sessions/result"
              >
                 View Responses 
              </a>
              
              
              
              <a
                class="btn btn-light btn-sm disabled button"
              >
                 Start Submission 
              </a>
              
              
              <a
                class="btn btn-light btn-sm button"
                href="/sessions/submission?courseid=CS2103&fsname=Second%20Session&user=John%20Doe"
                ng-reflect-ngb-tooltip="Edit submitted feedback"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="../sessions/submission"
                ngbtooltip="Edit submitted feedback"
                routerlink="../sessions/submission"
              >
                 Edit Submission 
              </a>
              
              
            </td>
          </tr>
        </tbody>
      </table>
      
    </div>
  </div>
</tm-student-home-page>
`;
